examples/codes/dubbo/xds/serviceentry.yaml
# apiVersion: networking.istio.io/v1beta1
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dubbo-app-se
spec:
  hosts:
    - dubbo-mosn.io.dubbo.DemoService-sayHello
  ports:
    - number: 20882
      name: dubbo-app-se
      protocol: TCP
  location: MESH_INTERNAL
  resolution: STATIC
  endpoints:
    - address: 10.13.160.40
    - address: 10.13.160.93
    - address: 10.13.160.4
